<resources>
    <string name="app_name">Poem</string>


    <string name="action_home">Home</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_setting">Setting</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_history">History</string>

    <string name="action_search">Search poem or author...</string>
    <string name="action_delete">Delete</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>