<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/ic_baseline_home_24"

    />
    <item
        android:id="@+id/action_dashboard"
        android:title="@string/action_dashboard"
        android:icon="@drawable/ic_baseline_dashboard_24"
        />
    <item
        android:id="@+id/action_favourite"
        android:title="@string/action_favourite"
        android:icon="@drawable/ic_baseline_favorite_24"
        />

    <item
        android:id="@+id/action_history"
        android:title="@string/action_history"
        android:icon="@drawable/ic_baseline_history_24"
        />
    <item
        android:id="@+id/action_setting"
        android:title="@string/action_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        />

</menu>